; ModuleID = '/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_zlog.c_zlog_stream_init_ex.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_zlog.c_zlog_stream_init_ex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zlog_stream = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zlog_stream_init_ex(%struct.zlog_stream* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.zlog_stream*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.zlog_stream* %0, %struct.zlog_stream** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.zlog_stream*, %struct.zlog_stream** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* %6, align 4
  %10 = call i32 @zlog_stream_init_internal(%struct.zlog_stream* %7, i32 %8, i32 1024, i32 %9)
  %11 = load %struct.zlog_stream*, %struct.zlog_stream** %4, align 8
  %12 = getelementptr inbounds %struct.zlog_stream, %struct.zlog_stream* %11, i32 0, i32 0
  store i32 1, i32* %12, align 4
  ret void
}

declare dso_local i32 @zlog_stream_init_internal(%struct.zlog_stream*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
